# Bankai

./: .env.example  Cargo.toml  README.md
src/: api.rs  app.rs  auth.rs  main.rs  token.rs
src/ui/: dashboard.rs  login.rs  mod.rs  page_selector.rs
src/ui/pages/: mod.rs  search.rs  stats.rs
